--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,18 @@
-.homepa{
+.apppage{
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   padding: 20px;
-  align-items: center;
   box-sizing: border-box;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.4);
   background-color: #ffffff;
+  height: auto;
+}
+.homepa{
+  display: flex;
+  flex-direction: column;
+  margin: 5%;
+  gap: 8px;
+ 
 }
 
 a {
